<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.AddProduct">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/base_title"
        android:textAlignment="center"
        android:text="@string/et_string_product_name"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"
        android:layout_marginBottom="20dp"/>

    <ScrollView
        android:id="@+id/add_product_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/add_new_reg_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/et_add_product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_product_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/base_label"
                    android:text="@string/label_add_product_category"/>

                <RadioButton android:id="@+id/radio_add_product_cat_men"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_add_product_cat_men"
                    android:layout_weight="1"/>
                <RadioButton android:id="@+id/radio_add_product_cat_women"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_add_product_cat_women"
                    android:layout_weight="1"/>
            </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/show_imgView"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:background="@drawable/imgborder"
                    android:paddingRight="5dp"
                    android:layout_weight="2"/>

                <Button
                    android:id="@+id/btn_add_product_choose"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Choose"
                    android:layout_gravity="center"
                    android:onClick="pickImage"

                    />

            </LinearLayout>

            <Button
                android:id="@+id/btn_rg_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/btn_add_product"
                android:onClick="AddProduct"
                style="@style/AppTheme.Button"
                android:layout_gravity="right"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>